resources/ingress/clusterissuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
