resources/ingress/catalog.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Instructs the controller to send TLS connections directly
    #to the backend instead of letting NGINX decrypt the communication
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # In some scenarios the exposed URL in the backend service differs
    # from the specified path in the Ingress rule. Without a
    # rewrite any request will return 404
    nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "letsencrypt"
    #cert-manager.io/issue-temporary-certificate: "true"
    #acme.cert-manager.io/http01-edit-in-place: "true"
  name: catalog-ingress
  namespace: istio-system
spec:
  rules:
  # On base domain we have NGINX running.
  # Deploy Keptn Teaser
  - host: catalog.front-end.domain.placeholder
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
        path: /
  tls:
  - hosts:
    - catalog.front-end.domain.placeholder
    #secretName: order-tls
