resources/ingress/sockshop.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Instructs the controller to send TLS connections directly 
    #to the backend instead of letting NGINX decrypt the communication
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # In some scenarios the exposed URL in the backend service differs
    # from the specified path in the Ingress rule. Without a
    # rewrite any request will return 404
    nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "letsencrypt"
    #cert-manager.io/issue-temporary-certificate: "true"
    #acme.cert-manager.io/http01-edit-in-place: "true"
  name: sockshop-ingress
  namespace: istio-system
spec:
  rules:
  - host: carts.sockshop-dev.domain.placeholder
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /
  - host: carts.sockshop-staging.domain.placeholder
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /
  - host: carts.sockshop-production.domain.placeholder
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /
  tls:
  - hosts:
    - carts.sockshop-dev.domain.placeholder
    - carts.sockshop-staging.domain.placeholder
    - carts.sockshop-production.domain.placeholder
    #secretName: sockshop-tls
